# gengetopt

./: .autotools  .cdtproject  .cproject  .cvsignore  .gitignore  .project  Bootstrap  ChangeLog  Makefile.am  Makefile.in  NEWS  NEWSold  NOTES  README  THANKS  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  gengetopt.directive  gengetopt.kdevelop  jenkins-build.sh  project.config  reconf
.csettings/: org.eclipse.linuxtools.cdt.autotools.core.configuration.build.1719783642_cdtBuildSystem  org.eclipse.linuxtools.cdt.autotools.core.configuration.build.1719783642_org.eclipse.cdt.core.settings
build-aux/: .gitignore
doc/: .cvsignore  Makefile.am  Makefile.in  README.example  gengetopt.info  gengetopt.texinfo  index.html  index.html.in  main1.cc  main2.c  man_getopt.html  multiple_example.c  no_getopt_long.txt  old_changes.html  sample1.ggo  sample2.ggo  stamp-vti  testdata  texinfo.outlang  version.texi
gl/: .cvsignore  Makefile.am  Makefile.in  string.h  unistd.h
gl/m4/: .cvsignore  gnulib-cache.m4  gnulib-comp.m4
intl/: .gitignore
m4/: .gitignore
po-client/: ChangeLog  Makevars  POTFILES.in  de.po  gengetopt-client.pot
src/: .cvsignore  Makefile.am  Makefile.in  acceptedvalues.cpp  acceptedvalues.h  argsdef.c  argsdef.h  cmdline.c  cmdline.ggo  cmdline.h  confparsergen.cc  confparsergen.h  cxxconfig.h  errorcodes.h  fileutils.cpp  fileutils.h  gengetopt.cc  gengetopt.h  ggos.cpp  ggos.h  global_opts.h  globals.cpp  gm.cc  gm.h  gm_utils.cpp  gm_utils.h  groups.h  parser.cc  parser.h  parser.yy  scanner.cc  scanner.ll  strdup.c  string_builder.cc  string_builder.h  yyerror.cc  yywrap.c
src/includes/: Makefile.am  sstream
src/skels/: .cvsignore  Makefile.am  Makefile.in  c_source.cc  c_source.h  c_source.h_skel  calculate_desc_column.cc  calculate_desc_column.h  calculate_desc_column.h_skel  check_modes.cc  check_modes.h  check_modes.h_skel  clear_arg.cc  clear_arg.h  clear_given.cc  clear_given.h  copyright.cc  copyright.h  custom_getopt_gen.cc  custom_getopt_gen.h  custom_getopt_gen.h_skel  dependant_option.cc  dependant_option.h  dependant_option.h_skel  enum_decl.cc  enum_decl.h  exit_failure.cc  exit_failure.h  file_save.cc  file_save.h  file_save.h_skel  file_save_multiple.cc  file_save_multiple.h  file_save_multiple.h_skel  free_inputs_string.cc  free_inputs_string.h  free_inputs_string.h_skel  free_list.cc  free_list.h  free_list.h_skel  (+80 more)
src/tests/: Makefile.in  test_specialchars.cc
tests/: .cvsignore  Makefile.am  Makefile.in  canonize-names-cmd.c.test  canonize-names-cmd.ggo  canonize-names-cmd.h.test  canonize-names.c  cmdline.c.test  cmdline.ggo  cmdline.h.test  default_cmdline.c  default_values.c  default_values_cmd.c.test  default_values_cmd.h.test  more_cmdparsers.c  more_than_once.c  more_than_once_cmd.c.test  more_than_once_cmd.h.test  no_multi_strings.c  no_multi_strings_cmd.c.test  no_multi_strings_cmd.h.test  no_multi_types.c  no_multi_types_cmd.c.test  no_multi_types_cmd.h.test  no_optgiven.c  no_optgiven2.c  no_optgiven_cmd.c.test  no_optgiven_cmd.ggo  no_optgiven_cmd.h.test  no_prog_name.c  no_strings.c  no_strings_cmd.c.test  no_strings_cmd.ggo  no_strings_cmd.h.test  no_unamed.c  no_unamed_cmd.c.test  no_unamed_cmd.h.test  suppressions.supp  test.output  test_align_cmd.c.test  (+95 more)
tests/output_dir/: Makefile.in
tests/output_header_dir/: Makefile.in
